clant (1.0.1) unstable;

  * Avoid running tools on sources in the build directory

 -- David Robillard <d@drobilla.net>  Mon, 14 Dec 2020 13:22:47 +0000

clant (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Sun, 13 Dec 2020 19:00:30 +0000